Adicionado mapeamento das classes e suas configurações no hibernate.cfg

--- a/WebContent/pages/principal.xhtml
+++ b/WebContent/pages/principal.xhtml
@@ -9,7 +9,9 @@
 <ui:composition template="/templates/modeloGeral.xhtml">
 
 	<ui:define name="conteudo">
-		<h:outputText value="Bem vindo ao Sistema para Cadastro e Gerenciamento de Benefícios" />
+		
+		<p:graphicImage library="images" name="logo.png" />
+		
 	</ui:define>
 
 </ui:composition>
