Adicionado imagem a principal do projeto

--- a/WebContent/pages/principal.xhtml
+++ b/WebContent/pages/principal.xhtml
@@ -9,9 +9,10 @@
 <ui:composition template="/templates/modeloGeral.xhtml">
 
 	<ui:define name="conteudo">
-		
-		<p:graphicImage library="images" name="logo.png" />
-		
+
+		<p:graphicImage library="images" name="logo.png"
+			style="width: 300px; display:block; margin-left: auto; margin-right:auto; position: absolute; top:25%; left: 25%;" />
+
 	</ui:define>
 
 </ui:composition>
