--- a/WebContent/pages/inscritoCadastro.xhtml
+++ b/WebContent/pages/inscritoCadastro.xhtml
@@ -29,6 +29,7 @@
 			<p:separator />
 
 			<h:panelGrid columns="2" id="panelInscritoCadastro">
+
 				<p:outputLabel value="Criança Inscrita:" />
 				<p:inputText maxlength="50" size="40"
 					style="text-transform: uppercase;"
@@ -36,7 +37,7 @@
 					<f:validateBean />
 				</p:inputText>
 
-				<p:outputLabel value="Nome:" />
+				<p:outputLabel value="Nome Completo:" />
 				<p:inputText maxlength="50" size="40"
 					style="text-transform: uppercase;"
 					value="#{inscritoBean.inscritoCadastro.nome}">
@@ -44,82 +45,84 @@
 				</p:inputText>
 
 				<p:outputLabel value="Data Nascimento:" />
-				<p:inputText maxlength="50" size="15"
-					value="#{inscritoBean.inscritoCadastro.nome}">
-					<f:validateBean />
-				</p:inputText>
+				<p:calendar value="#{inscritoBean.inscritoCadastro.dataNascimento}"
+					size="10" mask="true" pattern="dd/MM/yyyy" />
 
 				<p:outputLabel for="sexo" value="Sexo:" />
-				<p:selectOneRadio id="sexo" value="#{radioView.console}">
-					<f:selectItem itemLabel="Masculino" itemValue="Masculino" />
-					<f:selectItem itemLabel="Feminino" itemValue="Feminimo" />
+				<p:selectOneRadio id="sexo"
+					value="#{inscritoBean.inscritoCadastro.sexo}">
+					<f:selectItem itemLabel="Masculino" itemValue="MASCULINO" />
+					<f:selectItem itemLabel="Feminino" itemValue="FEMININO" />
 				</p:selectOneRadio>
 
 				<p:outputLabel value="Idade:" />
+				<p:inputText maxlength="50" size="15">
+					<f:validateBean />
+				</p:inputText>
+
+				<p:outputLabel value="Registro/RG:" />
 				<p:inputText maxlength="50" size="15"
-					value="#{inscritoBean.inscritoCadastro.nome}">
+					value="#{inscritoBean.inscritoCadastro.registroRg}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="Child Number:" />
 				<p:inputText maxlength="50" size="15"
-					value="#{inscritoBean.inscritoCadastro.nome}">
+					value="#{inscritoBean.inscritoCadastro.childNumber}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="PF:" />
 				<p:inputText maxlength="50" size="15"
-					value="#{inscritoBean.inscritoCadastro.nome}">
+					value="#{inscritoBean.inscritoCadastro.pf}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="CS:" />
 				<p:inputText maxlength="50" size="15"
-					value="#{inscritoBean.inscritoCadastro.nome}">
+					value="#{inscritoBean.inscritoCadastro.cs}">
 					<f:validateBean />
 				</p:inputText>
 
-
-
 				<p:outputLabel value="NIS:" />
 				<p:inputText maxlength="50" size="15"
-					value="#{inscritoBean.inscritoCadastro.nome}">
+					value="#{inscritoBean.inscritoCadastro.nis}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="Endereço:" />
 				<p:inputText maxlength="50" size="40"
-					value="#{inscritoBean.inscritoCadastro.nome}">
+					style="text-transform: uppercase"
+					value="#{inscritoBean.inscritoCadastro.endereco}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="Telefone Residencial:" />
-				<p:inputText maxlength="50" size="26"
-					value="#{inscritoBean.inscritoCadastro.nome}">
-					<f:validateBean />
-				</p:inputText>
+				<p:inputMask value="#{inscritoBean.inscritoCadastro.fone}"
+					mask="(99) 9999-9999" />
 
 				<p:outputLabel value="Celular:" />
-				<p:inputText maxlength="50" size="26"
-					value="#{inscritoBean.inscritoCadastro.nome}">
-					<f:validateBean />
-				</p:inputText>
+				<p:inputMask value="#{inscritoBean.inscritoCadastro.celular}"
+					mask="(99) 99999-9999" />
 
 				<p:outputLabel value="Escola em que estuda:" />
 				<p:inputText maxlength="50" size="40"
-					value="#{inscritoBean.inscritoCadastro.nome}">
+					style="text-transform: uppercase"
+					value="#{inscritoBean.inscritoCadastro.escola}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel for="horario_estudo" value="Horário que estuda:" />
-				<p:selectOneRadio id="horario_estudo" value="#{radioView.console}">
-					<f:selectItem itemLabel="Manhã" itemValue="Manhaã" />
-					<f:selectItem itemLabel="Tarde" itemValue="Tarde" />
-					<f:selectItem itemLabel="Noite" itemValue="Noite" />
+				<p:selectOneRadio id="horario_estudo"
+					value="#{inscritoBean.inscritoCadastro.horario}">
+					<f:selectItem itemLabel="Manhã" itemValue="MANHÃ" />
+					<f:selectItem itemLabel="Tarde" itemValue="TARDE" />
+					<f:selectItem itemLabel="Noite" itemValue="NOITE" />
 				</p:selectOneRadio>
 
 				<p:outputLabel for="serie" value="Série:" />
-				<p:selectOneMenu id="serie" value="">
+				<p:selectOneMenu id="serie"
+					value="#{inscritoBean.inscritoCadastro.serie}">
 					<f:selectItem itemLabel="Selecione uma série" itemValue="" />
 					<f:selectItem itemLabel="1º ano" itemValue="1º ano" />
 					<f:selectItem itemLabel="2º ano" itemValue="2º ano" />
@@ -148,25 +151,34 @@
 
 				<p:outputLabel value="Responsável:" />
 				<p:inputText maxlength="50" size="30"
-					value="#{inscritoBean.inscritoCadastro.nome}">
+					style="text-transform: uppercase"
+					value="#{inscritoBean.inscritoCadastro.responsavel}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel for="parentesco" value="Parentesco:" />
-				<p:selectOneMenu id="parentesco" value="">
+				<p:selectOneMenu id="parentesco"
+					value="#{inscritoBean.inscritoCadastro.parentesco}">
 					<f:selectItem itemLabel="Selecione um parentesco" itemValue="" />
-					<f:selectItem itemLabel="Pai" itemValue="Pai" />
-					<f:selectItem itemLabel="Mãe" itemValue="Mãe" />
-					<f:selectItem itemLabel="Avó/Avô" itemValue="Avó/Avô" />
-					<f:selectItem itemLabel="Tia/Tio" itemValue="Tia/Tio" />
-					<f:selectItem itemLabel="Prima/Primo" itemValue="Prima/Primo" />
+					<f:selectItem itemLabel="Pai" itemValue="PAI" />
+					<f:selectItem itemLabel="Mãe" itemValue="MÃE" />
+					<f:selectItem itemLabel="Avó/Avô" itemValue="AVÓ/AVÔ" />
+					<f:selectItem itemLabel="Tia/Tio" itemValue="TIA/TIO" />
+					<f:selectItem itemLabel="Prima/Primo" itemValue="PRIMA/PRIMO" />
 					<f:selectItem itemLabel="Sobrinha/Sobrinho"
-						itemValue="Sobrinha/Sobrinho" />
+						itemValue="SOBRINHA/SOBRINHO" />
 				</p:selectOneMenu>
 
 				<p:outputLabel value="RG ou CPF responsável:" />
 				<p:inputText maxlength="50" size="30"
-					value="#{inscritoBean.inscritoCadastro.nome}">
+					value="#{inscritoBean.inscritoCadastro.documentoResponsavel}">
+					<f:validateBean />
+				</p:inputText>
+				
+				<p:outputLabel value="Responsável Preenchimento:" />
+				<p:inputText maxlength="50" size="30"
+					style="text-transform: uppercase"
+					value="#{inscritoBean.inscritoCadastro.responsavelPreenchimento}">
 					<f:validateBean />
 				</p:inputText>
 			</h:panelGrid>
