--- a/WebContent/pages/inscritoPesquisa.xhtml
+++ b/WebContent/pages/inscritoPesquisa.xhtml
@@ -17,7 +17,7 @@
 	</ui:define>
 
 	<ui:define name="conteudo">
-		<h:form>
+		<h:form id="formInscrito">
 			<p:toolbar>
 				<f:facet name="left">
 					<h:outputText value="Fabricantes" />
@@ -80,13 +80,101 @@
 						<f:param name="inscritoAcao" value="Editar" />
 					</p:button>
 
-					<p:button icon="ui-icon-search" title="Exibir"
-						outcome="/pages/inscritoCadastro.xhtml">
-						<f:param name="inscritoId" value="#{inscrito.codigo}" />
-						<f:param name="inscritoAcao" value="Editar" />
-					</p:button>
+					<p:commandButton update=":formInscrito"
+						oncomplete="PF('dialogInscrito').show()" icon="ui-icon-search"
+						title="Exibir">
+						<f:setPropertyActionListener value="#{inscrito}"
+							target="#{inscritoBean.inscritoCadastro}" />
+					</p:commandButton>
 				</p:column>
 			</p:dataTable>
+
+			<p:dialog header="Informaçõs de Cadastro" widgetVar="dialogInscrito"
+				modal="true" showEffect="fade" hideEffect="fade" resizable="false"
+				visible="false" appendTo="@(body)">
+
+				<h:panelGrid columns="2" id="panelInfoInscritos">
+					<h:outputText value="Criança Inscrita:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.criancaInscrita}" />
+
+					<h:outputText value="Nome Completo:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.nome}" />
+
+					<h:outputText value="Data Nascimento:" />
+					<h:outputText
+						value="#{inscritoBean.inscritoCadastro.dataNascimento}" />
+
+					<h:outputText value="Sexo:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.sexo}" />
+
+					<h:outputText value="Idade:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.sexo}" />
+
+					<h:outputText value="Registro/RG:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.registroRg}" />
+
+					<h:outputText value="Child Number:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.childNumber}" />
+
+					<h:outputText value="PF:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.pf}" />
+
+					<h:outputText value="CS:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.cs}" />
+
+					<h:outputText value="NIS:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.nis}" />
+
+					<h:outputText value="Endereço:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.endereco}" />
+
+					<h:outputText value="Telefone Residência:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.fone}" />
+
+					<h:outputText value="Celular:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.celular}" />
+
+					<h:outputText value="Escola em que estuda:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.escola}" />
+
+					<h:outputText value="Horário que estuda:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.horario}" />
+
+					<h:outputText value="Série:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.serie}" />
+
+					<h:outputText value="Responável:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.responsavel}" />
+
+					<h:outputText value="Parentesco:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.parentesco}" />
+
+					<h:outputText value="RG/CPF do Responsável:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.documentoResponsavel}" />
+
+					<h:outputText value="Preenchimento:" />
+					<h:outputText style="text-transform: uppercase;"
+						value="#{inscritoBean.inscritoCadastro.responsavelPreenchimento}" />
+				</h:panelGrid>
+			</p:dialog>
 		</h:form>
 	</ui:define>
 </ui:composition>
