--- a/WebContent/pages/inscritoCadastro.xhtml
+++ b/WebContent/pages/inscritoCadastro.xhtml
@@ -22,7 +22,7 @@
 
 			<p:toolbar>
 				<f:facet name="left">
-					<h:outputText value="Ficha Cadastral - Atividades 2018" />
+					<h:outputText value="Ficha Cadastral - Atividades" />
 				</f:facet>
 			</p:toolbar>
 
@@ -44,14 +44,15 @@
 					<f:validateBean />
 				</p:inputText>
 
-					<p:outputLabel value="Data Nascimento:" />
-					<p:calendar value="#{inscritoBean.inscritoCadastro.dataNascimento}"
-						size="10" mask="true" pattern="dd/MM/yyyy" />
+				<p:outputLabel value="Data Nascimento:" />
+				<p:calendar value="#{inscritoBean.inscritoCadastro.dataNascimento}"
+					size="15" mask="true" pattern="dd/MM/yyyy" required="true"
+					requiredMessage="O campo Data de Nascimento é obrigatório." />
 
-					<p:outputLabel value="Idade:" />
-					<p:inputText maxlength="50" size="15">
-						<f:validateBean />
-					</p:inputText>
+				<p:outputLabel value="Idade:" />
+				<p:inputText maxlength="50" size="15">
+					<f:validateBean />
+				</p:inputText>
 
 				<p:outputLabel for="sexo" value="Sexo:" />
 				<p:selectOneRadio id="sexo"
@@ -62,31 +63,31 @@
 
 
 				<p:outputLabel value="Registro/RG:" />
-				<p:inputText maxlength="50" size="15"
+				<p:inputText maxlength="11" size="15"
 					value="#{inscritoBean.inscritoCadastro.registroRg}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="Child Number:" />
-				<p:inputText maxlength="50" size="15"
+				<p:inputText maxlength="10" size="15"
 					value="#{inscritoBean.inscritoCadastro.childNumber}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="PF:" />
-				<p:inputText maxlength="50" size="15"
+				<p:inputText maxlength="10" size="15"
 					value="#{inscritoBean.inscritoCadastro.pf}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="CS:" />
-				<p:inputText maxlength="50" size="15"
+				<p:inputText maxlength="10" size="15"
 					value="#{inscritoBean.inscritoCadastro.cs}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="NIS:" />
-				<p:inputText maxlength="50" size="15"
+				<p:inputText maxlength="10" size="15"
 					value="#{inscritoBean.inscritoCadastro.nis}">
 					<f:validateBean />
 				</p:inputText>
@@ -151,7 +152,7 @@
 				</p:selectOneMenu>
 
 				<p:outputLabel value="Responsável:" />
-				<p:inputText maxlength="50" size="30"
+				<p:inputText maxlength="50" size="40"
 					style="text-transform: uppercase"
 					value="#{inscritoBean.inscritoCadastro.responsavel}">
 					<f:validateBean />
@@ -171,13 +172,13 @@
 				</p:selectOneMenu>
 
 				<p:outputLabel value="RG ou CPF responsável:" />
-				<p:inputText maxlength="50" size="30"
+				<p:inputText maxlength="11" size="30"
 					value="#{inscritoBean.inscritoCadastro.documentoResponsavel}">
 					<f:validateBean />
 				</p:inputText>
 
 				<p:outputLabel value="Responsável Preenchimento:" />
-				<p:inputText maxlength="50" size="30"
+				<p:inputText maxlength="50" size="40"
 					style="text-transform: uppercase"
 					value="#{inscritoBean.inscritoCadastro.responsavelPreenchimento}">
 					<f:validateBean />
