--- a/WebContent/pages/inscritoPesquisa.xhtml
+++ b/WebContent/pages/inscritoPesquisa.xhtml
@@ -20,7 +20,7 @@
 		<h:form id="formInscrito">
 			<p:toolbar>
 				<f:facet name="left">
-					<h:outputText value="Fabricantes" />
+					<h:outputText value="Cadastro Inscrição" />
 				</f:facet>
 			</p:toolbar>
 
@@ -49,13 +49,13 @@
 				</p:column>
 
 				<p:column headerText="Nome" filterBy="#{inscrito.nome}"
-					style="text-align: center; text-transform: uppercase;">
+					style="text-align: center;">
 					<h:outputText value="#{inscrito.nome}" />
 				</p:column>
 
-				<p:column headerText="Endereço"
-					style="text-align: center; text-transform: uppercase;">
-					<h:outputText value="#{inscrito.endereco}" />
+				<p:column headerText="Endereço" style="text-align: center;">
+					<h:outputText value="#{inscrito.endereco}"
+						style="text-transform: uppercase;" />
 				</p:column>
 
 				<p:column headerText="PF" style="text-align: center; width: 10%;">
@@ -184,6 +184,12 @@
 						disabled="true"
 						value="#{inscritoBean.inscritoCadastro.responsavelPreenchimento}" />
 				</h:panelGrid>
+
+				<p:outputPanel columns="1" style="text-align: center;">
+					<p:separator />
+					<p:commandButton value="Cancelar"
+						oncomplete="PF('dialogInscrito').hide();" />
+				</p:outputPanel>
 			</p:dialog>
 		</h:form>
 	</ui:define>
