--- a/WebContent/pages/beneficioPesquisa.xhtml
+++ b/WebContent/pages/beneficioPesquisa.xhtml
@@ -49,7 +49,7 @@
 				</p:column>
 
 				<p:column headerText="Nome" filterBy="#{inscrito.nome}"
-					style="text-align: center; text-transform: uppercase;">
+					style="text-align: center;">
 					<h:outputText value="#{inscrito.nome}" />
 				</p:column>
 
