--- a/WebContent/pages/beneficioPesquisa.xhtml
+++ b/WebContent/pages/beneficioPesquisa.xhtml
@@ -11,185 +11,138 @@
 	<ui:define name="metadata">
 		<f:metadata>
 
-			<f:event listener="#{inscritoBean.carregarPesquisa}"
+			<f:event listener="#{beneficioBean.carregarPesquisa}"
 				type="preRenderView" />
 		</f:metadata>
 	</ui:define>
 
 	<ui:define name="conteudo">
-		<h:form id="formInscrito">
+		<h:form id="formBeneficio">
 			<p:toolbar>
 				<f:facet name="left">
-					<h:outputText value="Cadastro Inscrição" />
+					<h:outputText value="Cadastro de Benefícios" />
 				</f:facet>
 			</p:toolbar>
 
 			<p:separator />
 
 			<p:dataTable emptyMessage="Nenhum registro encontrado..."
-				value="#{inscritoBean.listaInscritos}"
-				filteredValue="#{inscritoBean.listaInscritosFiltrados}"
-				var="inscrito" paginator="true" rows="10">
+				value="#{beneficioBean.listaBeneficios}"
+				filteredValue="#{beneficioBean.listaBeneficiosFiltrados}"
+				var="beneficio" paginator="true" rows="10">
 
 				<f:facet name="footer">
 					<p:button value="Novo"
-						outcome="/pages/inscritoCadastro.xhtml?faces-redirect=true">
-						<f:param name="inscritoAcao" value="Novo" />
+						outcome="/pages/beneficioCadastro.xhtml?faces-redirect=true">
+						<f:param name="beneficioAcao" value="Novo" />
 					</p:button>
 				</f:facet>
 
-				<p:column headerText="Código" style="text-align: center; width:6%;">
-					<h:outputText value="#{inscrito.codigo}" />
+				<p:column headerText="Código" style="text-align: center; width:4%;">
+					<h:outputText value="#{beneficio.codigo}" />
 				</p:column>
 
-				<p:column headerText="Child Number"
-					style="text-align: center; width:12%;"
-					filterBy="#{inscrito.childNumber}">
-					<h:outputText value="#{inscrito.childNumber}" />
-				</p:column>
-
-				<p:column headerText="Nome" filterBy="#{inscrito.nome}"
-					style="text-align: center;">
-					<h:outputText value="#{inscrito.nome}" />
-				</p:column>
-
-				<p:column headerText="Endereço" style="text-align: center;">
-					<h:outputText value="#{inscrito.endereco}"
+				<p:column headerText="Nome" style="text-align: center; width:14%;">
+					<h:outputText value="#{beneficio.inscrito.nome}"
 						style="text-transform: uppercase;" />
 				</p:column>
 
-				<p:column headerText="PF" style="text-align: center; width: 10%;">
-					<h:outputText value="#{inscrito.pf}" />
+				<p:column headerText="Atividade"
+					style="text-align: center; width:14%;">
+					<h:outputText value="#{beneficio.atividade.nome}"
+						style="text-transform: uppercase;" />
 				</p:column>
 
-				<p:column headerText="Celular"
-					style="text-align: center; width: 13%;">
-					<h:outputText value="#{inscrito.celular}" />
+				<p:column headerText="Dia da Semana"
+					style="text-align: center; width:8%;">
+					<h:outputText value="#{beneficio.diaDaSemana}"
+						style="text-transform: uppercase;" />
+				</p:column>
+
+				<p:column headerText="Horário" style="text-align: center; width:6%;">
+					<h:outputText value="#{beneficio.horario}" />
+				</p:column>
+
+				<p:column headerText="Inicio" style="text-align: center; width:6%;">
+					<h:outputText value="#{beneficio.dataInicio}">
+						<f:convertDateTime pattern="dd/MM/yyyy"
+							timeZone="America/Sao_Paulo" />
+					</h:outputText>
+				</p:column>
+
+				<p:column headerText="Fim" style="text-align: center; width:6%;">
+					<h:outputText value="#{beneficio.dataFim}">
+						<f:convertDateTime pattern="dd/MM/yyyy"
+							timeZone="America/Sao_Paulo" />
+					</h:outputText>
 				</p:column>
 
 				<p:column headerText="Opção" style="text-align: center; width: 10%;">
 					<p:button icon="ui-icon-trash" title="Excluir"
-						outcome="/pages/inscritoCadastro.xhtml">
-						<f:param name="inscritoId" value="#{inscrito.codigo}" />
-						<f:param name="inscritoAcao" value="Excluir" />
+						outcome="/pages/beneficioCadastro.xhtml">
+						<f:param name="beneficioId" value="#{beneficio.codigo}" />
+						<f:param name="beneficioAcao" value="Excluir" />
 					</p:button>
 
 					<p:button icon="ui-icon-pencil" title="Editar"
-						outcome="/pages/inscritoCadastro.xhtml">
-						<f:param name="inscritoId" value="#{inscrito.codigo}" />
-						<f:param name="inscritoAcao" value="Editar" />
+						outcome="/pages/beneficioCadastro.xhtml">
+						<f:param name="beneficioId" value="#{beneficio.codigo}" />
+						<f:param name="beneficioAcao" value="Editar" />
 					</p:button>
 
-					<p:commandButton update=":formInscrito"
-						oncomplete="PF('dialogInscrito').show()" icon="ui-icon-search"
+					<p:commandButton update=":formBeneficio"
+						oncomplete="PF('dialogBeneficio').show()" icon="ui-icon-search"
 						title="Exibir">
-						<f:setPropertyActionListener value="#{inscrito}"
-							target="#{inscritoBean.inscritoCadastro}" />
+						<f:setPropertyActionListener value="#{beneficio}"
+							target="#{beneficioBean.beneficioCadastro}" />
 					</p:commandButton>
 				</p:column>
 			</p:dataTable>
 
-			<p:dialog header="Informaçõs de Cadastro" widgetVar="dialogInscrito"
-				modal="true" showEffect="fade" hideEffect="fade" resizable="false"
-				visible="false" appendTo="@(body)">
+			<p:dialog header="Informaçõs dos Benefícios"
+				widgetVar="dialogBeneficio" modal="true" showEffect="fade"
+				hideEffect="fade" resizable="false" visible="false"
+				appendTo="@(body)">
 
-				<h:panelGrid columns="2" id="panelInfoInscritos">
-					<h:outputText value="Criança Inscrita:" />
+				<h:panelGrid columns="2" id="panelInfoBeneficios">
+					<h:outputText value="Nome:" />
 					<h:inputText style="text-transform: uppercase;" size="30"
 						disabled="true"
-						value="#{inscritoBean.inscritoCadastro.criancaInscrita}" />
+						value="#{beneficioBean.beneficioCadastro.inscrito.nome}" />
 
-					<h:outputText value="Nome Completo:" />
+					<h:outputText value="Atividade" />
 					<h:inputText style="text-transform: uppercase;" size="30"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.nome}" />
+						disabled="true"
+						value="#{beneficioBean.beneficioCadastro.atividade.nome}" />
 
-					<h:outputText value="Data Nascimento:" />
+					<h:outputText value="Dias da Semana" />
+					<h:inputText style="text-transform: uppercase;" size="30"
+						disabled="true"
+						value="#{beneficioBean.beneficioCadastro.diaDaSemana}" />
+
+					<h:outputText value="Horário" />
+					<h:inputText style="text-transform: uppercase;" size="30"
+						disabled="true" value="#{beneficioBean.beneficioCadastro.horario}" />
+
+					<h:outputText value="Data Início:" />
 					<h:inputText size="15" disabled="true"
-						value="#{inscritoBean.inscritoCadastro.dataNascimento}">
+						value="#{beneficioBean.beneficioCadastro.dataInicio}">
+						<f:convertDateTime pattern="dd/MM/yyyy"
+							timeZone="America/Sao_Paulo" />
+					</h:inputText>
+					<h:outputText value="Data Fim:" />
+					<h:inputText size="15" disabled="true"
+						value="#{beneficioBean.beneficioCadastro.dataFim}">
 						<f:convertDateTime pattern="dd/MM/yyyy"
 							timeZone="America/Sao_Paulo" />
 					</h:inputText>
 
-					<h:outputText value="Sexo:" />
-					<h:inputText style="text-transform: uppercase;" size="15"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.sexo}" />
-
-					<h:outputText value="Idade:" />
-					<h:inputText style="text-transform: uppercase;" size="15"
-						disabled="true" value="" />
-
-					<h:outputText value="Registro/RG:" />
-					<h:inputText style="text-transform: uppercase;" size="15"
-						disabled="true"
-						value="#{inscritoBean.inscritoCadastro.registroRg}" />
-
-					<h:outputText value="Child Number:" />
-					<h:inputText style="text-transform: uppercase;" size="15"
-						disabled="true"
-						value="#{inscritoBean.inscritoCadastro.childNumber}" />
-
-					<h:outputText value="PF:" />
-					<h:inputText style="text-transform: uppercase;" size="15"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.pf}" />
-
-					<h:outputText value="CS:" />
-					<h:inputText style="text-transform: uppercase;" size="15"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.cs}" />
-
-					<h:outputText value="NIS:" />
-					<h:inputText style="text-transform: uppercase;" size="20"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.nis}" />
-
-					<h:outputText value="Endereço:" />
-					<h:inputText style="text-transform: uppercase;" size="30"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.endereco}" />
-
-					<h:outputText value="Telefone Residência:" />
-					<h:inputText style="text-transform: uppercase;" size="20"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.fone}" />
-
-					<h:outputText value="Celular:" />
-					<h:inputText style="text-transform: uppercase;" size="20"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.celular}" />
-
-					<h:outputText value="Escola em que estuda:" />
-					<h:inputText style="text-transform: uppercase;" size="30"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.escola}" />
-
-					<h:outputText value="Horário que estuda:" />
-					<h:inputText style="text-transform: uppercase;" size="15"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.horario}" />
-
-					<h:outputText value="Série:" />
-					<h:inputText style="text-transform: uppercase;" size="20"
-						disabled="true" value="#{inscritoBean.inscritoCadastro.serie}" />
-
-					<h:outputText value="Responável:" />
-					<h:inputText style="text-transform: uppercase;" size="30"
-						disabled="true"
-						value="#{inscritoBean.inscritoCadastro.responsavel}" />
-
-					<h:outputText value="Parentesco:" />
-					<h:inputText style="text-transform: uppercase;" size="20"
-						disabled="true"
-						value="#{inscritoBean.inscritoCadastro.parentesco}" />
-
-					<h:outputText value="RG/CPF do Responsável:" />
-					<h:inputText style="text-transform: uppercase;" size="20"
-						disabled="true"
-						value="#{inscritoBean.inscritoCadastro.documentoResponsavel}" />
-
-					<h:outputText value="Preenchimento:" />
-					<h:inputText style="text-transform: uppercase;" size="30"
-						disabled="true"
-						value="#{inscritoBean.inscritoCadastro.responsavelPreenchimento}" />
+					<p:outputPanel columns="1" style="text-align: center;">
+						<p:separator />
+						<p:commandButton value="Cancelar"
+							oncomplete="PF('dialogBeneficio').hide();" />
+					</p:outputPanel>
 				</h:panelGrid>
-
-				<p:outputPanel columns="1" style="text-align: center;">
-					<p:separator />
-					<p:commandButton value="Cancelar"
-						oncomplete="PF('dialogInscrito').hide();" />
-				</p:outputPanel>
 			</p:dialog>
 		</h:form>
 	</ui:define>
