--- a/WebContent/pages/beneficioCadastro.xhtml
+++ b/WebContent/pages/beneficioCadastro.xhtml
@@ -29,19 +29,28 @@
 			<p:separator />
 
 			<h:panelGrid columns="2" id="panelBeneficioCadastro">
-				<p:outputLabel value="Nome:" />
-				<p:inputText maxlength="50" size="40"
-					style="text-transform: uppercase;"
-					value="#{beneficioBean.beneficioCadastro.inscrito.nome}">
-					<f:validateBean />
-				</p:inputText>
 
-				<p:outputLabel value="Atividade:" />
-				<p:inputText maxlength="50" size="40"
-					style="text-transform: uppercase;"
-					value="#{beneficioBean.beneficioCadastro.atividade.nome}">
+				<p:outputLabel for="nome" value="Nome:" />
+				<p:selectOneMenu id="nome" converter="inscritoConverter"
+					value="#{beneficioBean.beneficioCadastro.inscrito}" required="true"
+					requiredMessage="O campo nome é obrigatório.">
+					<f:selectItem itemLabel="Selecione uma pessoa..." itemValue="" />
+					<f:selectItems value="#{beneficioBean.listaInscritosFiltrados}"
+						var="inscrito" itemValue="#{inscrito}"
+						itemLabel="#{inscrito.nome}" />
 					<f:validateBean />
-				</p:inputText>
+				</p:selectOneMenu>
+
+				<p:outputLabel for="atividade" value="Atividade:" />
+				<p:selectOneMenu id="atividade" converter="atividadeConverter"
+					value="#{beneficioBean.beneficioCadastro.atividade}"
+					required="true" requiredMessage="O campo atividade é obrigatório.">
+					<f:selectItem itemLabel="Selecione uma atividade..." itemValue="" />
+					<f:selectItems value="#{beneficioBean.listaAtividadesFiltradas}"
+						var="atividade" itemValue="#{atividade}"
+						itemLabel="#{atividade.nome}" />
+					<f:validateBean />
+				</p:selectOneMenu>
 
 				<p:outputLabel for="diasemana" value="Dia da Semana:" />
 				<p:selectOneMenu id="diasemana"
@@ -63,7 +72,7 @@
 
 				<p:outputLabel for="horarioInicio" value="Horário Início:" />
 				<p:selectOneMenu id="horarioInicio"
-					value="#{beneficioBean.beneficioCadastro.diaDaSemana}">
+					value="#{beneficioBean.beneficioCadastro.horarioInicio}">
 					<f:selectItem itemLabel="Selecione uma hora..." itemValue="" />
 					<f:selectItem itemLabel="08:00" itemValue="08:00" />
 					<f:selectItem itemLabel="08:30" itemValue="08:30" />
@@ -93,7 +102,7 @@
 
 				<p:outputLabel for="horarioFim" value="Horário Fim:" />
 				<p:selectOneMenu id="horarioFim"
-					value="#{beneficioBean.beneficioCadastro.diaDaSemana}">
+					value="#{beneficioBean.beneficioCadastro.horarioFim}">
 					<f:selectItem itemLabel="Selecione uma hora..." itemValue="" />
 					<f:selectItem itemLabel="08:00" itemValue="08:00" />
 					<f:selectItem itemLabel="08:30" itemValue="08:30" />
@@ -131,25 +140,24 @@
 					size="15" mask="true" pattern="dd/MM/yyyy" required="true"
 					requiredMessage="O campo Data Fim é obrigatório." />
 			</h:panelGrid>
-			
+
 			<h:panelGrid columns="5">
-					<p:commandButton value="Novo"
-						actionListener="#{beneficioBean.novo}"
-						update=":formBeneficioCadastro:panelBeneficioCadastro" />
+				<p:commandButton value="Novo" actionListener="#{beneficioBean.novo}"
+					update=":formBeneficioCadastro:panelBeneficioCadastro" />
 
-					<p:commandButton value="Salvar"
-						actionListener="#{beneficioBean.salvar}"
-						update=":mensagemGlobal :formBeneficioCadastro:panelBeneficioCadastro" />
+				<p:commandButton value="Salvar"
+					actionListener="#{beneficioBean.salvar}"
+					update=":mensagemGlobal :formBeneficioCadastro:panelBeneficioCadastro" />
 
-					<p:commandButton value="Excluir" icon="ui-icon-trash"
-						actionListener="#{beneficioBean.excluir}" update=":mensagemGlobal" />
+				<p:commandButton value="Excluir" icon="ui-icon-trash"
+					actionListener="#{beneficioBean.excluir}" update=":mensagemGlobal" />
 
-					<p:commandButton value="Editar" icon="ui-icon-pencil"
-						actionListener="#{beneficioBean.editar}" update=":mensagemGlobal" />
+				<p:commandButton value="Editar" icon="ui-icon-pencil"
+					actionListener="#{beneficioBean.editar}" update=":mensagemGlobal" />
 
-					<p:button value="Voltar"
-						outcome="/pages/beneficioPesquisa.xhtml?faces-redirect=true" />
-				</h:panelGrid>
+				<p:button value="Voltar"
+					outcome="/pages/beneficioPesquisa.xhtml?faces-redirect=true" />
+			</h:panelGrid>
 		</h:form>
 	</ui:define>
 </ui:composition>
