--- a/WebContent/pages/beneficioCadastro.xhtml
+++ b/WebContent/pages/beneficioCadastro.xhtml
@@ -56,7 +56,7 @@
 				<p:selectOneMenu id="diasemana"
 					value="#{beneficioBean.beneficioCadastro.diaDaSemana}">
 					<f:selectItem itemLabel="Selecione um dia da semana" itemValue="" />
-					<f:selectItem itemLabel="Segunda" itemValue="Segunda-" />
+					<f:selectItem itemLabel="Segunda" itemValue="Segunda" />
 					<f:selectItem itemLabel="Terça" itemValue="Terça" />
 					<f:selectItem itemLabel="Quarta" itemValue="Quarta" />
 					<f:selectItem itemLabel="Quinta" itemValue="Quinta" />
