--- a/WebContent/pages/usuarioCadastro.xhtml
+++ b/WebContent/pages/usuarioCadastro.xhtml
@@ -42,10 +42,10 @@
 				</p:inputText>
 
 				<p:outputLabel value="Senha:" />
-				<p:inputText maxlength="8" size="15"
+				<p:password maxlength="8" size="15"
 					value="#{usuarioBean.usuarioCadastro.senha}">
 					<f:validateBean />
-				</p:inputText>
+				</p:password>
 
 				<p:outputLabel value="Tipo:" />
 				<p:inputText maxlength="50" size="15"
